# Noctura-Test-Wallet-App

./: -  .gitignore  ANONYMITY_FEATURES.md  APP_TESTING_GUIDE.md  ARCHITECTURE.md  ARCHIVE_INSTRUCTIONS.md  AUDIT_COMPLETE.md  Anchor.toml  BALANCE_DIAGNOSIS_SCRIPT.js  BALANCE_FIX_SUMMARY.md  CONSOLIDATION_DOCUMENTATION_INDEX.md  CONSOLIDATION_FEATURE.md  CONSOLIDATION_FINAL_SUMMARY.md  CONSOLIDATION_IMPLEMENTATION_COMPLETE.md  CONSOLIDATION_QUICK_REFERENCE.md  CONSOLIDATION_SWAP_TEST_GUIDE.md  CONSOLIDATION_TEST_GUIDE.md  CONSOLIDATION_VERIFICATION.md  CONSOLIDATION_VISUAL_GUIDE.md  CORRECTED_ANALYSIS.md  CRITICAL_FIXES_APPLIED.md  Cargo.toml  DEPOSIT_TEST_EXECUTION.md  DEVELOPER_GUIDE.md  DOCUMENTATION_INDEX.md  EXPECTED_TX_OUTPUT.md  FEE_AND_PRIVACY_SECURITY.md  FEE_COLLECTOR_ADDRESS.md  FEE_COLLECTOR_FINAL_ANSWER.md  FEE_COLLECTOR_REFERENCE.md  FINAL_ANSWER.md  FIX_43_NOC_GUIDE.md  FIX_FEE_COLLECTOR_DEPOSIT.md  FIX_FEE_ISSUE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_CODE_SAMPLES.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  MULTI_NOTE_SEND_COMPLETE.md  NEXT_STEPS_ANALYSIS_2025.md  (+59 more)
.cargo/: config.toml
app/: .env.example  .eslintrc.cjs  README.md  checkPools.cjs  check_full_verifier.mjs  check_verifier.mjs  debug_scalar_mul.mjs  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.cjs  test_deposit.mjs  test_syscall.mjs  test_syscall_direct.mjs  test_zero_inputs.mjs  tsconfig.json  (+1 more)
programs/noctura-shield/: Cargo.toml
programs/noctura-shield/src/: errors.rs  events.rs  lib.rs  merkle.rs  state.rs  utils.rs  verifier.rs
(+247 files in other folders)
