[workspace]
members = [
  "programs/noctura-shield"
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"

[profile.release]
overflow-checks = true

[patch.crates-io]
proc-macro-crate = { path = "vendor/proc-macro-crate" }
solana-program = { path = "vendor/solana-program" }
