[package]
name = "noctura-shield"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "noctura_shield"

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = "1.18"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
pairing-logs = []

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
num-bigint = { version = "0.4", features = ["std"] }
